--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "react": "17.0.1",
     "react-native": "0.64.0"
   },
@@ -26,6 +27,4 @@
   "jest": {
     "preset": "react-native"
   }
-
-  
 }
