--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "events": "^3.3.0",
+    "pg": "^8.6.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -38,5 +40,8 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "rnpm": [
+    "./assets/fonts/"
+  ]
 }
