--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "events": "^3.3.0",
+    "net": "^1.0.2",
     "pg": "^8.6.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
